# fintech_task_c_dev

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_test.sh  simulator
inc/: simulator.h
libft/: .gitignore  Makefile  README.md
libft/inc/: libft.h
libft/src/get/: ft_getch.c
libft/src/lst/: ft_lstcut.c  ft_lstputstr.c
libft/src/put/: ft_putmem.c  ft_putstr_fd.c
src/: ex_request.c  exit.c  ft_exit.c  ft_order_functions.c  get_request.c  gnl_l.c  main.c  order_add.c  order_ex.c  order_get_functions.c  tests.c
tests/: run_test.sh
